@@ -14,6 +14,8 @@ Revision history for Perl extension IPC::Shareable.
       size larger than our internal 1GB default
     - Cleaned up exception throwing (particularly if seg size eats up all
       memory, we throw an appropriate message)
+    - Display proper exception if we try to exhaust all available shared memory
+      segments (fixes #3)
 
 1.04    2021-06-28
     - Skip unspawn tests for perls with -Duselongdouble, as Storable is not
